deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: serve 
        image: ghcr.io/redhat-na-ssa/ollama:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 11434
          protocol: TCP
        # resources:
        #   limits:
        #     nvidia.com/gpu: "1"
        #   requests:
        #     nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /ollama
          name: storage
      restartPolicy: Always
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: ollama
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Equal"
        effect: "NoSchedule"
        value: "true"
